welcome.lessons.welcome.bat.bool2.AlarmClock.scala.error
alarmClock:16: error: not found: value weekday
		if(weekday(day))
                   ^alarmClock:29: error: not found: value weekdayBool
		weekdayBool = false;	
                ^