welcome.lessons.welcome.bat.bool2.AlarmClock.scala.code
def alarmClock(day:Int, vacation:Boolean): String = {

	var time = "";
	if(vacation)
	{
		if(weekDay(day))
		{
		time = "10:00"	;		
		}

	}
	else
	{
		time = "10:00"	;	
		
		if(weekday(day))
		{
		time = "7:00";
		}
	}
	return time;
}


def weekDay(day:Int): Boolean = {
var weekDayBool = true;
	if(day == 0 || day == 6)
	{
		weekdayBool = false;	
	}

	return weekDayBool;	
}
	

